# python-jenkins

./: .zuul.yaml  README.rst  setup.cfg  test-requirements.txt  tox.ini
jenkins/: __init__.py
tests/: test_build.py
tests/jobs/: test_info.py
