[metadata]
name = python-jenkins
author = Ken Conley
author_email = kwc@willowgarage.com
summary = Python bindings for the remote Jenkins API
maintainer = Python-Jenkins Developers
maintainer_email = python-jenkins-developers@lists.launchpad.net
description-file = README.rst
license = BSD
home-page = https://opendev.org/jjb/python-jenkins
project-urls =
    Documentation = https://python-jenkins.readthedocs.io/
classifier =
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Environment :: Console
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    jenkins

[pbr]
warnerrors = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[flake8]
show-source = True
exclude = .venv,.tox,dist,build,*.egg
max-line-length = 120
